# aoc25

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.zed/: settings.json
1/: day1.py
2/: day2.py
3/: day3.py
5/: main.py
6/: main.py
7/: main.py
day01/: main.py  test.txt
day02/: main.py
day03/: main.py
day04/: main.py
day05/: main.py
day06/: main.py
day07/: main.py
day08/: main.py
day09/: main.py
day10/: main.py
day11/: main.py
day12/: main.py
scripts/: new_day.py  setup.sh
shared/: __init__.py  union_find.py
